[gd_scene load_steps=2 format=2]

[ext_resource path="res://characters/bullet_generator.gd" type="Script" id=1]

[node name="Center" type="Node2D"]
script = ExtResource( 1 )

[node name="SpinSpeed" type="Tween" parent="."]

[node name="FireRate" type="Timer" parent="."]

[node name="LifeTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="FireRate" to="." method="_on_FireRate_timeout"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
